<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="top|center"
        android:orientation="vertical"
        android:weightSum="4">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textColor="@android:color/holo_green_light"
            android:textSize="40sp"
            android:layout_weight="0.5"
            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="110dp"
            android:layout_height="0dp"
            app:srcCompat="@mipmap/logo"
            android:layout_weight="1"
            />


        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_weight="0.5"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:layout_weight="0.5"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:layout_weight="0.5"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/holo_orange_light"
            android:text="@string/register"
            android:layout_weight="0.3"

            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>