<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical"
        android:weightSum="1.2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0.1"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            >

            <TextView

                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/choose"

                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="40sp" />
        </LinearLayout>
        <Button
        android:id="@+id/darzininkas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1"
        android:background="@android:color/holo_green_light"
        android:text="@string/darzininkas"
        android:textColor="@android:color/white" />


        <Button
            android:id="@+id/sodininkas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/sodininkas"

            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/gelininkas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:background="@android:color/holo_orange_dark"

            android:text="@string/gelininkas"
            android:textColor="@android:color/white" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>