<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityDarbai"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical"
            android:weightSum="5"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

            <Button
                    android:id="@+id/darbai"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/darbai"
                    android:textColor="@android:color/white"/>

            <Button
                    android:id="@+id/calendar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/calendar"
                    android:textColor="@android:color/white"/>

        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">
        <TextView
                android:id="@+id/darbai2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/darbai2"
                android:textAlignment="center"
            android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="40sp"/>

        <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                app:tabMode="scrollable"
                app:tabGravity="fill"
            android:layout_gravity="center_horizontal"
                android:id="@+id/tabs"
                android:layout_height="wrap_content">
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_gravity="center_horizontal"
                android:id="@+id/viewpager">

        </android.support.v4.view.ViewPager>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="0dp"
    android:layout_gravity="center|bottom"
    >


    <Button
        android:id="@+id/atgal"
        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_weight="0.4"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/atgal"

        android:textColor="@android:color/white" />
        </LinearLayout>
        ></LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>