<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="57dp"
            android:weightSum="2">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

            <Button
                    android:id="@+id/darbai"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/darbai"
                    android:textColor="@android:color/white"/>

            <Button
                    android:id="@+id/calendar"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/calendar"
                    android:textColor="@android:color/white"/>

        </LinearLayout>

        <TextView
                android:id="@+id/calendar2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/calendar2"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"
                android:layout_weight="0.2"
                android:textSize="40sp"/>

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                app:mcv_showOtherDates="all"
                app:mcv_selectionColor="@android:color/holo_green_light"
        />
        <ListView
                android:id="@+id/datelistview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
        ></ListView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>